# onemonth-dev

./: MASTERPLAN.md  PRIMARY_POA.md  README.md  ROADMAP.md  SUMMARY.md
backend/: main.py  pyproject.toml  supabase_migrations.sql
backend/app/: main.py
backend/app/agents/: curriculum_agent.py
backend/app/api/dependencies/: __init__.py
backend/app/api/endpoints/: __init__.py  auth.py  chat.py  checkout.py  curricula.py  logbook.py  notifications.py  polar.py  practice.py  users.py
backend/app/core/: auth.py  config.py
backend/app/db/: supabase_client.py
backend/app/models/: curriculum.py  user.py
backend/app/services/: email_service.py  recap_service.py  validation_service.py
backend/app/tools/: __init__.py  knowledge_sources.py  our_langchain_tools.py  scraping.py  search.py
frontend/: components.json  index.html  package.json  pnpm-lock.yaml  railway.toml  static.json  tailwind.config.js  tsconfig.app.json  vercel.json
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatPanel.tsx  ContentView.tsx  CurriculumCreationForm.tsx  FileTree.tsx  LogbookEditor.tsx  LogbookEntryCard.tsx  LogbookPromptModal.tsx  LogbookStats.tsx  ManageSubscriptionDialog.tsx  Navbar.tsx  PaywallGate.tsx  PracticeHistory.tsx  PracticeProblems.tsx  ProtectedRoute.tsx  SubscribeDialog.tsx  SubscriptionBanner.tsx
frontend/src/contexts/: AppContext.tsx
frontend/src/lib/: api.ts  subscription.tsx  utils.ts
frontend/src/pages/: AuthPage.tsx  CurriculumPage.tsx  DashboardPage.tsx  LandingPage.tsx  LogbookPage.tsx  (+3 more)
(+4 files in other folders)
